# osara

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  appveyor.yml  build.sh  makePot.py  readme.md  sconstruct
.github/workflows/: build.yml  prBuildResultComment.yml  updateTranslations.yml
ci/: buildSite  crowdinSync  osaraCiHook  ssh_id_rsa.enc  ssh_known_hosts
config/: reaper-kb.ini
config/linux/: reaper-kb.ini
config/mac/: reaper-kb.ini
config/windows/: reaper-kb.ini
include/: CMakeLists.txt
include/EBUR128/: ebur128.jsfx-inc  ebur128_analysis  memorymanager.jsfx-inc
include/WDL/: db2val.h
include/reaper/: reaper_plugin.h  reaper_plugin_functions.h
installer/: osara.nsi
locale/: de_DE.po  es_ES.po  es_MX.po  fr_CA.po  fr_FR.po  nb_NO.po  pt_BR.po  ru_RU.po  tr_TR.po  zh_CN.po  zh_TW.po
site_scons/: installerStrings.py  makeConfigRc.py  makeInstallerStrings.py  makePot.py
src/: CMakeLists.txt  UIA.cpp  archBuild_sconscript  build.bat  build32.bat  build64.bat  buildVersion.h  build_mac.sh  config.cpp  config.h  controlSurface.cpp  coreUtils.cpp  coreUtils.h  envelopeCommands.cpp  envelopeCommands.h  exports.cpp  fxChain.cpp  fxChain.h  linuxA11y.cpp  linuxA11y.h  linuxa11y.cpp  linuxa11y_wrapper.h  midiEditorCommands.cpp  midiEditorCommands.h  osara.h  osara_keymap.h  osxa11y.mm  osxa11y_wrapper.h  paramsUi.cpp  paramsUi.h  peakWatcher.cpp  peakWatcher.h  reaper_osara.cpp  reaper_osara.rc  resource.h  settings.h  trans  translation.cpp  translation.h  uia.cpp  (+5 more)
tools/: kb2header.py  sortKeymap.py
(+27 files in other folders)
